--- a/APBioFinal/index.html
+++ b/APBioFinal/index.html
@@ -179,7 +179,8 @@
       </div>
       <div class="col-md-6">
         <div class="about-text">
-         
+          <img src="images/mouse.jpg" id = "mouse">
+         <p> A group of scientists tested a theory to see whether trauma can be passed down from a parent to an offspring. They discovered that there were changes in the Epigenome which caused epigenetic changes in people. A Different scientist examined rats and discovered that once a gene was turned off by rna it wouldn’t appear for over 80 generations. They also found that mice who were malnourished had descents who became overweight easily. They also tested it with stress and found that pups who were taken away from their mother gave birth to pups who had behavioral changes. Researchers think that stress might affect lncRNA, since the traumatised mice’s pups had higher levels of it.</p>
         </div>
       </div>
       <div class="col-md-6">
