--- a/APBioFinal/index.html
+++ b/APBioFinal/index.html
@@ -239,7 +239,7 @@ $(document).ready(function() {
      
       $("#owl-demo").owlCarousel({
      
-          navigation : false, 
+          navigation : false, // Show next and prev buttons
           slideSpeed : 500,
 		  autoPlay : 3000,
           paginationSpeed : 400,
